pahk/scss/app.scss
@import "settings";
@import "foundation";

@import url(https://fonts.googleapis.com/css?family=Signika:400,600,700,300);
@import url(https://fonts.googleapis.com/css?family=Montserrat:400,700);
@import url(https://fonts.googleapis.com/css?family=Noticia+Text:400,400italic,700,700italic);

// --------- VARIABLES

$main-turq: #3fb0ac; 
$main-yellow: #fae596;
$main-dark: #163f45;

$white: #fff;
$grey-light: #e6e6e6;
$grey-dark: #666666;

$font-art: 'Signika', sans-serif;
$font-header: 'Montserrat', sans-serif;;
$font-body: 'Noticia Text', serif;;

// --------- GLOBAL

html {
  box-sizing: border-box;
  -webkit-box-sizing: border-box;
  -moz-box-sizing: border-box;
}

*, *:before, *:after {
  box-sizing: inherit;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
}

body {
  background-image: url('../images/bg-retina-dust.png');
  font-family: $font-body, sans-serif;
  color: $main-turq;
}

h1, h2, h3, h4, h5, h6 {
	color: $main-turq;
	font-family: $font-header;
}

h1, h2, h4, h5, {
	text-transform: uppercase;
	font-weight: bold;
}

h1 {
	font-size: 1.5rem;
	text-align: center;
	margin: 60px 0 40px 0;
	position: relative;
}

h1.strike:before {
   	content: "";
    display: block;
    border-top: solid 1px $main-turq;
    width: 100%;
    height: 1px;
    position: absolute;
    top: 50%;
    z-index: 1;
}

h1.strike span {
  	background-image: url('../images/bg-retina-dust.png');
	padding: 0 60px;
	position: relative;
	z-index: 5;
}

h2 {
	font-size: 1.25rem;
	text-align: center;
}

h3 {
	font-family: $font-art !important;
	font-weight: 600;
	font-size: 1.3rem;
	line-height: 1.7rem;
}

h4 {
	font-size: 0.8rem;
}

h5 {
	font-size: 0.7rem;
}

h6 {
	font-size: 0.75rem;
	font-weight: 700;
}

p {
	font-size: 0.9rem;
	line-height: 1.2rem;
}

p.text-block, li {
	font-size: 0.9rem;
	line-height: 1.7rem;
}

span.subheader {
	font-family: $font-header;
	max-width: 500px;
	margin: 0 auto;
	color: $main-dark;
	display: block;
	text-align: center;
	font-weight: bold;
}

.font-art {
	font-family: $font-art;
}

h4.subheader-strike {
	text-align: center;
	margin: 30px 30px 40px 30px;
	position: relative;
}

h4.subheader-strike:before {
   	content: "";
    display: block;
    border-top: solid 1px $main-turq;
    width: 100%;
    height: 1px;
    position: absolute;
    top: 50%;
    z-index: 1;
}

h4.subheader-strike span {
	background-color: white;
	padding: 0 35px;
	position: relative;
	z-index: 5;
}

ol.custom-counter {
	counter-reset: number-counter;
	list-style-type: none;
	position: relative;
}

ol li {
	position: relative;
	padding-left: 55px;
	margin-bottom: 20px;
}

ol.custom-counter li:before {
	content: counter(number-counter);
	counter-increment: number-counter;
	font-size: 1.3rem;
	margin-right: 30px;
	color: $main-dark;
	font-weight: bold;
	// border-left: 5px solid $main-yellow;
	padding-left: 10px;
	display: block;
	position: absolute;
	left: 0;
}

span.letter-list {
	color: $main-yellow;
	font-size: 1.1rem;
	padding-right: 7px;
}


// --------- UI

.top-bar {
	height: 3.8rem;
	border-top: 4px solid $main-turq;
	background-color: $white;
}

.logo {
	height: calc(3.8rem - 4px);
}

.top-bar-section li:not(.has-form) a:not(.button) {
	height: calc(3.8rem - 4px);
	padding: 0.45rem 0.9rem;
	border-right: 1px solid $main-yellow;
	background-color: $white;
	color: $main-turq;
}

.top-bar-section ul li > a {
	font-family: $font-art;
	font-weight: 700;
	text-transform: uppercase;
}

.top-bar-section ul li > a:hover {
	background-color: red;
}

.icon-search {
	width: 17px;
	margin-top: -2px;
}

.page-title {
	width: 100%;
	h1 {
		text-transform: uppercase;
	}
}

span.frame-line {
	display: inline-block;
	margin-top: 40px;
	margin-bottom: 20px;
	margin-left: 10px;
	border-bottom: 2px solid $main-turq;
	width: 60px;
	color: $white;
}

.card {
	background-color: $white;
	margin-top: 30px;
	margin-bottom: 30px;
	padding-bottom: 40px;
	padding-top: 40px;
}

.text-section {
	margin-top: 30px;
	margin-bottom: 40px;
	background-color: white;
	span.frame-line {
		display: block;
		margin: 0 auto;
		margin-top: 15px;
		margin-bottom: 40px;
		width: 80px;
		border-width: 1px;
	}
	p {
		line-height: 1.5rem;
	}
}

a.button.cta {
	background-color: $main-yellow;
	border-left: 7px solid $main-dark;
	padding: 10px 80px;
	display: block;
	margin: 0 auto;
	margin-bottom: 30px;
	text-align: center;
	max-width: 350px;
	text-transform: uppercase;
	color: $main-dark;
	font-family: $font-header;
	font-weight: bold;
	font-size: 0.8rem;
	&:hover {
		background-color: $main-turq;
	}
}

a.cta.inner-button {
	margin: 0 15px 30px;
	padding: 10px;
	display: block;
}

.block-icon {
	max-height: 50px;
}

footer {
	background-color: $main-yellow;
	padding: 20px 0;
	margin-top: 50px;
	img {
		max-height: 100px;
		max-width: 320px;
		width: auto;
		vertical-align: middle;
	}
	h6 {
		text-transform: uppercase;
		color: $main-turq;
		font-size: 0.65rem;
		margin: 30px 0 15px;
	}
	p {
		font-family: $font-header;
		font-size: 0.65rem;
		color: $grey-dark;
		margin-bottom: 0;
	}
}

.relative-position {
	position: relative;
}


// --------- PAGES

.inner-page-banner {
	border: 6px solid $main-turq;
	height: 280px;
	background-image: url(../images/banner-inner-1.jpg);
	background-size: cover;
	background-position: center;
	position: relative;
}

.inner-artwork-overview {
	background-color: rgba(0,0,0,0.6);
	padding: 30px;
	position: absolute;
	bottom: 0;
	text-align: center;
	border-left: 4px solid $main-yellow;
	h5 {
		color: $white;
		font-weight: bold;
		padding-bottom: 5px;
	}
	h6 {
		color: $main-yellow;
		font-weight: bold;
		padding-bottom: 5px;
	}
	h3 {
		line-height: 1.6rem;
	}
	h3.artist-name {
		color: $white;
		font-size: 1.1rem;
		padding-bottom: 0px;
	}
	h3.artwork-name {
		color: white;
		font-size: 1.3rem;
		margin-bottom: 0;
		color: $white;
	}
}

.how-it-works {
	h4 {
		color: $main-dark;
		border: 1px solid $main-yellow;
		padding: 10px 40px;
		max-width: 350px;
	}
	p {
		margin-top: 30px;
		margin-bottom: 30px;
	}
}

.explanatory-block {
	h4 {
		display: block;
		margin: 0 auto;
	}
	overflow: auto;
}

.support {
	a.button-single {
		margin-bottom: 40px;
	}
	.block-icon {
		margin: 20px 10px 25px;
	}
	.explanatory-text {
		border: 1px solid $main-turq;
		min-height: 215px;
		h4 {
			background-color: $main-turq;
			color: $white;
			padding: 7px;
			font-size: 0.9rem;
		}
		p {
			padding: 30px 17px;
			margin-bottom: 0;
		}
	}
}



// --------- ISOTOPE FILTER 


/* ---- button ---- */

#filters {
	margin-top: 20px;
	margin-bottom: 25px;
}

.filter-button {
  display: inline-block;
  padding: 0.4rem 1.2rem;
  background: $grey-light;
  color: $main-turq;
  font-family: $font-header;
  font-size: 0.8rem;
  cursor: pointer;
  margin: 0 0 0.5rem;
  font-weight: bold;
}

.filter-button:hover {
  background-color: $main-yellow;
  color: $main-turq;
}

.filter-button:active,
.filter-button.is-checked {
  background-color: $main-turq;
  color: $main-yellow;
  font-weight: 500;
}


.filter-button:active {
  box-shadow: inset 0 1px 5px $main-yellow;
}

/* ---- button-group ---- */

.filter-button-group:after {
  content: '';
  display: block;
  clear: both;
}

.filter-button-group .filter-button {
  float: left;
  margin-left: 0;
  margin-right: 5px;
}

/* ---- isotope ---- */

/* clear fix */
.isotope:after {
  content: '';
  display: block;
  clear: both;
}

.isotope {
	border: 1px solid $main-yellow;
	img {
		width: 100%;
	}
}

.isotope h3, .isotope h5, .isotope h6 {
	padding-left: 10px;
}

.isotope h5 {
	margin-top: 10px;
	margin-bottom: 10px;
}

.isotope h6 {
	margin-bottom: 10px;
}

.element-item img {
	margin-bottom: 20px;
}



/* ---- .element-item ---- */

.element-item {
  position: relative;
  float: left;
  width: calc(50% - 20px);
  margin: 10px;
  padding: 10px;
  background: $white;
  color: #262524;
  overflow: auto;
}

.element-item > * {
  margin: 0;
  padding: 0;
}

.element-item .name {
  position: absolute;

  left: 10px;
  top: 60px;
  text-transform: none;
  letter-spacing: 0;
  font-size: 12px;
  font-weight: normal;
}

.element-item .symbol {
  position: absolute;
  left: 10px;
  top: 0px;
  font-size: 42px;
  font-weight: bold;
  color: white;
}

.element-item .number {
  position: absolute;
  right: 8px;
  top: 5px;
}

.element-item .weight {
  position: absolute;
  left: 10px;
  top: 76px;
  font-size: 12px;
}

// --------- MEDIA QUERIES


@media #{$small-up} { 
	.support .explanatory-block-2 .explanatory-text {
		min-height: 230px;
		a.button.cta {
			max-width: 250px;
		}
	}
}

@media #{$small-only} { 
	.explanatory-block-2 a.cta.inner-button {
		display: block;
		margin: 0 auto;
	}
	.support .explanatory-text{
		min-height: 160px;
	}
}

@media #{$medium-up} { 
}

@media #{$medium-only} { 
	.explanatory-block-2 {
		.column+.column:last-child, .columns+.columns:last-child {
		float: none;
		}
		a.cta.inner-button {
			display: block;
			margin: 0 auto;
		}
	}
}

@media #{$large-up} {
	.explanatory-block-2 a.cta.inner-button-3 {
		margin-top: 48px;
	} 
}

@media #{$large-only} { 
}

@media #{$xlarge-up} { 
}

@media #{$xlarge-only} { 
}

@media #{$xxlarge-up} { 
}

@media #{$xxlarge-only} { 
}

/* min-width 641px and max-width 774*/

@media only screen and (min-width: 641px) and (max-width: 705px) { 
	.support .explanatory-text{
		min-height: 270px;
	}
}

@media only screen and (min-width: 705px) and (max-width: 774px) { 
	.support .explanatory-text{
		min-height: 240px;
	}
} 


@media only screen and (min-width: 775px) and (max-width: 949px) { 
	.support .explanatory-text{
		min-height: 230px;
	}
} 

@media only screen and (min-width: 1025px) and (max-width: 1139px) { 
	.support .explanatory-text{
		min-height: 220px;
	}
} 


// --------- MASONRY TEST


// #SlideMiddle {
// 	display: block;
// 	width: 100%;
// 	min-height: 100%;
// 	#nav-bar-filters {
// 		display: flex;
// 		width: 100%;
// 		height: 100%;
// 		.filter-item{
// 			font-family: $font-header;
// 			cursor: pointer;
// 			display: flex;
// 			justify-content:center;
// 			position: relative;
// 			color: $main-turq;
// 				font-size: 0.8rem;
// 			text-align:center;
// 			vertical-align: middle;
// 			border: 1px solid $main-turq;
// 			margin: 0 0.2rem 3.5rem;
// 			padding: 0.3rem 1.2rem;
// 			text-transform: uppercase;
// 			&:hover{
// 			  background-color: $main-yellow;
// 			  color: $main-turq;
// 			}
// 			&.active{
// 				color: $main-yellow;
// 				background-color: $main-turq;
// 				font-weight: 500;
// 			}
// 		}
// 	}
	

// 	#grid{
// 		margin: 20px auto;
// 		width: 1150px;
// 	}
	
// 	@media screen and (min-width: 1315px){
// 		#grid{
// 			// width: 1275px;
// 			width: 1150px;
// 		}
// 	}
	
// 	@media screen and (min-width: 1630px){
// 		#grid{
// 			// width: 1590px;
// 			width: 1150px;
// 		}
// 	}
	
// 	@media screen and (min-width: 1945px){
// 		#grid{
// 			// width: 1905px;
// 			width: 1150px;
// 		}
// 	}
	
// 	@media screen and (min-width: 2260px){
// 		#grid{
// 			// width: 2220px;
// 			width: 1150px;
// 		}
// 	}
	
	
// 	#grid-content{
// 		position: relative;
// 		.grid-item{
// 			margin-bottom: 15px;
// 			width: 555px;
// 			background-color: white;
// 		}
// 	}
// }


// ---------------

